# random-stuff

./: .gitignore  README.md  sorting.py
GDI-CS/: ByteBeat.cs  Data.cs  GDI-CS.csproj  GDI.cs  Payloads.cs  Time.cs  WinApi.cs  gdi.py
GDI-PY/: Payloads.cs  gdi.spec
Limbo/: Limbo.csproj  Limbo.sln  Main.cs
ascii-video-player/: .gitignore  character_brightness.txt  character_brightness_sorted.txt  character_brightness_sorted_chars.txt  main.py  old.py  requirements.txt  setup.py  unicode_sample.txt
astral-eternity/: Met3965.tmp  alternateuniverse.gdshader  alternateuniverse.tscn  chowder.gdshader  density.gdshader  density_map_canvas.gd  mai4943.tmp  mai57FB.tmp  mai9F73.tmp  maiD545.tmp  main.tscn  metaball.gd  metaball_render.gd  post.gdshader
bootloader/: bootloader.asm  disk.img  test.bat
end-portal-wallpaper/: index.html  project.json  shader.js  style.css
fish-sim/: FishSim_3D.m  FishSim_Blind_Zone.m  fish-sim copy.py  fish-sim.py
fluXis-bad-apple/: Cargo.toml
frame-merge/: Cargo.toml
gdi/: gdi.py  gdi.spec  requirements.txt  tempCodeRunnerFile.py
image-corruption/: corrupt.js  corrupt.py
letter-counter/: Cargo.toml
mandelbrot-python/: mandelbrot - onethread.py  mandelbrot.py
mandelbrot-rust/: Cargo.toml  mandelbrot.py
mandelbrot-set/: mandelbrot - backup.py  mandelbrot.py  tempCodeRunnerFile.py
merge_frames/: merge_frames.py  very_et.mov
non-euclidean/: export_presets.cfg  icon.svg.import  project.godot
rat-slime/: Cargo.toml
rust-anim/: Cargo.toml
rust/frame-merge/: .gitignore  Cargo.toml
rust/frame-merge/src/: main.rs
(+925 files in other folders)
