[package]
name = "frame-merge"
version = "0.1.0"
edition = "2021"

[dependencies]
fuzzy-matcher = "0.3.7"
image = "0.25.6"
indicatif = "0.17.11"
inquire = "0.7.5"
ndarray = "0.16.1"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
video-rs = { version = "0.10.3", features = ["ndarray"] }
